--- a/locales/en.json
+++ b/locales/en.json
@@ -450,6 +450,11 @@
       "upTo": "prize pool €2,500",
       "name": "Saddle up for the Weekly Derby",
       "text": "It’s Weekly Derby time, and our prizes will have you chomping at the bit to be first past the post!<br/><br/>Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.<br/><br/>Just make a minimum bet of €0.5 and be ready for the race. <br/><br/>Good luck and let’s begin the Derby!"
+    },
+    "luckyPlayson": {
+      "upTo": "The prize pool is €13,000.",
+      "name": "Lucky 13",
+      "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
     }
   },
   "tournaments": {
@@ -1358,6 +1363,34 @@
       },
       {
         "text": "For Free Spins, wagering is x5."
+      }
+    ]
+  },
+  "luckyPlayson": {
+    "title": "Lucky 13",
+    "prize": "€13,000",
+    "text": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
+    "textMobile": "Enjoy 13 epic games in August with the Lucky 13 tournament by Playson!<br/>NineCasino have teamed up with the awesome game provider Playson to invite you to join Lucky 13, running between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!",
+    "terms": [
+      {
+        "title": "Campaign duration:",
+        "text": "The tournament runs between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+      },
+      {
+        "title": "Campaign structure:",
+        "text": "The tournament runs between 0:01 UTC and 23:59 UTC on the 13th of August 2021 with a €13,000 Prize Pool!"
+      },
+      {
+        "title": "Prize pool information:",
+        "text": "€13,000 Prize Pool Table:<br/>Places:        Prize EUR<br/>1   -     € 1,313<br/>2    -    € 1,013<br/>3    -    € 813<br/>4    -    € 666<br/>5    -    € 453<br/>6    -    € 413<br/>7    -    € 353<br/>8    -    € 313<br/>9    -    € 253<br/>10-12    -    € 213<br/>13    -    € 130<br/>14-25    -    € 93<br/>26-50    -    € 63<br/>51-150     -   € 33<br/>151-200    -    € 13"
+      },
+      {
+        "title": "Minimum bet requirements:",
+        "text": "0.13 EUR"
+      },
+      {
+        "title": "Additional terms and conditions:",
+        "text": "With 13 participating games: <br/>● Book of Gold: Double Chance <br/>● Book of Gold: Multichance <br/>● Buffalo Power: Hold and Win <br/>● Burning Wins: classic 5 lines <br/>● Diamond Wins: Hold and Win <br/>● Divine Dragon: Hold and Win <br/>● Hot Coins: Hold and Win <br/>● Legend of Cleopatra Megaways™ <br/>● Sevens n Fruits <br/>● Solar Queen <br/>● Solar Temple <br/>● Super Sunny Fruits: Hold and Win <br/>● Wolf Power: Hold and Win.<br/><br/>The minimum number of spins required to qualify in this promotion is 13 spins. Points are calculated round-by-round, with each 1 EUR wagered equaling 100 points."
       }
     ]
   }
