--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1395,24 +1395,19 @@
     "textMobile": "Navigujte a proskákejte svou cestu skrz bouřlivý síťový turnaj RAPID SPINS od EvoPlay. Uhánějte po řece za cenami a přistaňte ve finálním prize poolu v hodnotě 10 000 €! ",
     "terms": [
       {
-        "title": "Doba kampaně:<br/><br/>",
-        "text": "Turnaj proběhne od 12. srpna 2021 0:01 UTC do 22. srpna 2021 23:59 UTC<br/><br/>"
+        "title": "Turnaj proběhne od 12. srpna 2021 0:01 UTC do 22. srpna 2021 23:59 UTC<br/><br/>"
       },
       {
-        "title": "Bude zahrnovat celkem 10 her: <br/><br/>",
-        "text": "Fruit SuperNova, Ice Mania, Hot Triple Sevens, Indiana's Quest, Cycle of Luck, Elven Princess, Midnight Show, Rise of Horus, Temple of Dead a Irish Reels<br/><br/>"
+        "title": "Bude zahrnovat celkem 10 her:<br/><br/> Fruit SuperNova, Ice Mania, Hot Triple Sevens, Indiana's Quest, Cycle of Luck, Elven Princess, Midnight Show, Rise of Horus, Temple of Dead a Irish Reels<br/><br/>"
       },
       {
-        "title": "Minimální sázka:<br/><br/>",
-        "text": "Minimální vklad je 0,5 € nebo ekvivalent v jiných měnách<br/><br/>"
+        "title": "Minimální vklad je 0,5 € nebo ekvivalent v jiných měnách<br/><br/>"
       },
       {
-        "title": "Struktura cen:",
-        "text": "Prize pool ve výši 10 000 € si rozdělí 100 prvních hráčů ve výsledkové tabulce podle níže uvedeného umístění v turnaji:<br/>1. místo – 1 670 €<br/>2. místo – 1 270 €<br/>3. místo – 1 000 €<br/>4. místo – 667 €<br/>5. místo – 600 €<br/>6. místo – 533 €<br/>7. místo – 400 €<br/>8. místo – 293 €<br/>9. místo – 220 €<br/>10.–19. místo – 133 €<br/>20.–49. místo – 33 €<br/>50.–100. místo – 20 €"
+        "title": "Prize pool ve výši 10 000 € si rozdělí 100 prvních hráčů ve výsledkové tabulce podle níže uvedeného umístění v turnaji:<br/>1. místo – 1 670 €<br/>2. místo – 1 270 €<br/>3. místo – 1 000 €<br/>4. místo – 667 €<br/>5. místo – 600 €<br/>6. místo – 533 €<br/>7. místo – 400 €<br/>8. místo – 293 €<br/>9. místo – 220 €<br/>10.–19. místo – 133 €<br/>20.–49. místo – 33 €<br/>50.–100. místo – 20 €"
       },
       {
-        "title": "Podmínky promo akcí:",
-        "text": "Jeden spin odpovídá jednomu bodu. Čím více bodů, tím vyšší umístění hráče ve výsledkové tabulce."
+        "title": "Jeden spin odpovídá jednomu bodu. Čím více bodů, tím vyšší umístění hráče ve výsledkové tabulce."
       }
     ]
   }
