NINE-640 fixed texts after test

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -449,7 +449,7 @@
       "text": "Je čas na Weekly Derby a naše ceny vás donutí trochu trošku supět, abyste první dorazili na místo!<br/><br/>Turnaj probíhá 7 dnů od čtvrtka 00:01 UTC do středy 23:59 UTC. Chopte se své příležitosti rozdělit si cenný prize pool ve výši 2500 eur společně se 40 dalšími jezdci.<br/><br/>Stačí minimální sázka 0,5 eur a být připravený na soutěž.<br/><br/>Hodně štěstí a pojďme odstartovat Derby! "
     },
     "rapidSpins": {
-      "title": "Síťový turnaj<br/>RAPID SPINS<br/>od EvoPla",
+      "title": "Síťový turnaj<br/>RAPID SPINS<br/>od EvoPlay",
       "upTo": "10 000 €",
       "name": "Síťový turnaj RAPID SPINS od EvoPlay",
       "text": "Navigujte a proskákejte svou cestu skrz bouřlivý síťový turnaj RAPID SPINS od EvoPlay. Uhánějte po řece za cenami a přistaňte ve finálním prize poolu v hodnotě 10 000 €!"
