--- a/locales/cs.json
+++ b/locales/cs.json
@@ -160,7 +160,8 @@
     "search": "Hledat",
     "searchResults": "Výsledky hledání",
     "nothingFound": "Bohužel, nic nenalezeno",
-    "try": "Zkuste hledat něco jiného"
+    "try": "Zkuste hledat něco jiného",
+    "popular": "Oblíbená hledání"
   },
   "common" : {
     "date" : "Datum",
