--- a/locales/de.json
+++ b/locales/de.json
@@ -164,7 +164,8 @@
     "search": "Suchen",
     "searchResults": "Suchergebnisse",
     "nothingFound": "Entschuldigung, nichts gefunden",
-    "try": "Versuche, nach etwas anderem zu suchen"
+    "try": "Versuche, nach etwas anderem zu suchen",
+    "popular": "Beliebte Treffer"
   },
   "common": {
     "date": "Datum",
