--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -11,7 +11,7 @@
     "deposit": "Deposit",
     "depositNow": "Deposit now",
     "loadMoreGames": "Load more games",
-    "playForFun": "Play for fun",
+    "playForFun": "Demo",
     "playNow": "Play now",
     "showMore": "Show more",
     "saveChanges": "Save changes",
