--- a/locales/en.json
+++ b/locales/en.json
@@ -457,8 +457,13 @@
       "title": "twitter<br/> Giveaway",
       "upTo": "600 Free Spins",
       "name": "600 Free Spins Giveaway on Twitter.",
-      "text": "We’ve prepared a giveaway for you on our official Twitter account.<br/><br/> Follow us, like this tweet, and wait for the results on August 16th. We will randomly choose 3 winners and each of them will receive 250 Free Spins in the Wolf Gold slot.<br/><br/>Good Luck!"
+      "text": "We’ve prepared a giveaway for you on our official {twitterAccount}.{br}{br} Follow us, like this {tweet}, and wait for the results on August 16th. We will randomly choose 3 winners and each of them will receive 250 Free Spins in the Wolf Gold slot.{br}{br}Good Luck!"
     }
+  },
+  "twitter": {
+    "twitterBtn": "Twitter",
+    "twitterAccount": "Twitter account",
+    "tweet": "tweet"
   },
   "tournaments": {
     "games": "Games in this tournament",
