NINE-650 fixed word

--- a/locales/de.json
+++ b/locales/de.json
@@ -1266,7 +1266,7 @@
   "dailyCashback": {
     "cashback": "Rückzahlung",
     "title": "Tägliche rückzahlung<br/>bis zu 20%",
-    "text1": "Wer bekommt im Casino nicht gerne Geld zurück?<br/>  Selbst wenn Sie verloren haben! Wirklich, Sie haben sich nicht verlesen – wir erstatten Ihnen Geld mit einer Umsatzanforderung von&nbsp;x5 urück, wenn Sie verlieren.",
+    "text1": "Wer bekommt im Casino nicht gerne Geld zurück?<br/>  Selbst wenn Sie verloren haben! Wirklich, Sie haben sich nicht verlesen – wir erstatten Ihnen Geld mit einer Umsatzanforderung von&nbsp;x5 zurück, wenn Sie verlieren.",
     "text2": "Wenn Ihnen das passiert ist und Sie heute im Ninecasino Geld verloren haben, erhalten Sie es von uns morgen nach folgendem Muster zurück:",
     "terms": "Rückerstattungsbedingungen",
     "termsList": [
