--- a/locales/de.json
+++ b/locales/de.json
@@ -468,7 +468,7 @@
     "twitterGiveaway": {
       "title": "twitter<br/> Giveaway",
       "upTo": "600 Freispiele",
-      "name": "600 Freispiele geschenkt auf Twitter.",
+      "name": "600 Freispiele geschenkt auf Twitter",
       "text": "Wir haben ein Geschenk für Sie auf unserem Konto bei {twitterAccount}.{br}{br}Folgen Sie uns, befürworten Sie {tweet} und warten Sie bis zum 26. August auf die Ergebnisse. 3 glückliche Gewinnerinnen und Gewinner werden nach dem Zufallsprinzip ausgewählt und erhalten jeweils 200 Freispiele für das Automatenspiel Wolf Gold.{br}{br}Viel Glück!"
     }
   },
