--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1312,6 +1312,8 @@
     ]
   },
   "lottery": {
+    "metaTitle": "➤ Loterie Tesla s Tesly Model 3 – Hrajte své oblíbené hry a vyhrávejte skvělou cenu - Tesly Model 3!",
+    "metaDescription": "✭ Zúčastněte se loterie Tesla v NineCasino ➔ Vezměte si los pro Teslu!",
     "title": "Weekend<br/> Playing Lottery ",
     "prize": "<span class=\"Colored\">€ 2,500</span> + <span class=\"Colored\">500 Free Spins</span>",
     "text": "Running for 7 days every week from Thursday 00:01 UTC to Wednesday 23:59 UTC. Grab your chance to share a podium worthy prize pool of €2,500 with 40 lucky riders.",
@@ -1372,6 +1374,32 @@
       },
       {
         "text": "Pro spiny zdarma ceny dostanete je protočení x5."
+      }
+    ]
+  },
+  "tesla_lottery": {
+    "title": "Loterie Tesla",
+    "name": "Loterie Tesla",
+    "prize": "Tesly Model 3",
+    "text": "Zúčastněte se loterie Tesla v NineCasino od 18. srpna do 23. září 2021 a získejte šanci stát se šťastným výhercem Tesly Model 3!<br/><br/>Výherce vozu Tesla oznámíme 24. září!",
+    "terms": [
+      {
+        "text": "Loterie proběhne od 18. srpna do 23. září 2021."
+      },
+      {
+        "text": "Minimální vklad na jeden los je 50 eur. Každý los může vyhrát."
+      },
+      {
+        "text": "Počet losů na jednoho hráče není nijak omezený."
+      },
+      {
+        "text": "Čím více losů budete mít v době losování, tím vyšší budou vaše šance na výhru ceny."
+      },
+      {
+        "text": "V době slosování nesmí být herní účet zablokovaný."
+      },
+      {
+        "text": "Výherce loterie bude oznámený 24. září."
       }
     ]
   },
