NINE-658 added pictures

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1378,7 +1378,7 @@
     ]
   },
   "tesla_lottery": {
-    "title": "Loterie Tesla",
+    "title": "Loterie<br/> Tesla",
     "name": "Loterie Tesla",
     "prize": "Tesly Model 3",
     "text": "Zúčastněte se loterie Tesla v NineCasino od 18. srpna do 23. září 2021 a získejte šanci stát se šťastným výhercem Tesly Model 3!<br/><br/>Výherce vozu Tesla oznámíme 24. září!",
