--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -1385,7 +1385,7 @@
   "tesla_lottery": {
     "metaTitle": "➤ Tesla Lottery With Tesla Model 3 - Play Your Favorite Games And Win Great Prize - Tesla Model 3!",
     "metaDescription": "✭ Try Your Luck In New Tesla Lottery by NineCasino ➔ Take a ticket for a Tesla!",
-    "title": "The Tesla Lottery",
+    "title": "The Tesla<br/> Lottery",
     "name": "The Tesla Lottery",
     "prize": "Tesla Model 3",
     "text": "Join the Tesla Lottery at NineCasino between August 18th, 2021 and September 23rd, 2021 and get a chance to become the happy owner of a Tesla Model 3! <br/><br/>On the 24th of September we will announce the Tesla winner!",
