--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -1383,7 +1383,7 @@
     ]
   },
   "tesla_lottery": {
-    "title": "La loterie Tesla",
+    "title": "La loterie<br/> Tesla",
     "name": "Tesla Model 3",
     "prize": "Tesly Model 3",
     "text": "Participez à la loterie Tesla sur NineCasino entre le 18 août 2021 et le 23 septembre 2021 et courez la chance de devenir l’heureux propriétaire d’une Tesla Model 3!<br/><br/>Nous annoncerons le gagnant de la Tesla le 24 septembre!",
